--- a/Week2/Day2/exstyle.css
+++ b/Week2/Day2/exstyle.css
@@ -31,3 +31,38 @@
       background-color: yellow;
       border: 2px solid black;
     }
+@media screen and (max-width: 1400px) {
+    body {
+      
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 609px;
+    }
+
+    .container {
+    display: grid;
+    grid-template-columns: auto 1fr auto;
+    gap: 130px;
+    align-items: center;
+}
+
+    .column {
+      display: flex;
+      flex-direction: column;
+      gap: 26px;
+    }
+
+    .row {
+      display: flex;
+      justify-content: center;
+      gap: 115px;
+    }
+
+    .box {
+      width: 100px;
+      height: 100px;
+      background-color: yellow;
+      border: 2px solid black;
+    }
+ } 
