--- a/Week2/Day2/shopify/style.css
+++ b/Week2/Day2/shopify/style.css
@@ -39,8 +39,8 @@ body {
   display: flex;
   gap: 20px;
   padding: 40px;
-  justify-content: center;
-      column-gap: 226px;
+  justify-content: space-around;
+     
 
 }
 
