latest commit component

--- a/Week2/Day3/bootstrap/Component/componentex.html
+++ b/Week2/Day3/bootstrap/Component/componentex.html
@@ -6,9 +6,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+
     <title>Document</title>
 </head>
 <body>
+   
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">Navbar</a>
@@ -51,31 +54,34 @@
     </div>
   </div>
 </nav>
+  
+  
 <!-- Jumbotron -->
   <div class="p-5 bg-light" id="jumbo">
     <h1 class="mb-3">Hello,world!</h1>
     <h4 class="mb-3">This is exercise #9.it include a large callout lyout called ajumbotron pieces of content</h4>
     <a id="txtlearn-more"  class="btn btn-primary" href="" role="button">Learn more</a>
   </div>
+
 <!-- Jumbotron -->
-  <div class="container">
-    <div class="row">
+  
+    <div class=" p-5 row">
       <div class="col-md-4">
         <h2>Heading</h2>
-        <p>Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
-        <p><a class="btn btn-white border" href="#" role="button">View details </a></p>
+        <p>Donec id elit non mi porta gravida at eget metus. <br> Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+        <p><a class="btn btn-white border" href="#" role="button"> <i class="fa-solid fa-chart-simple"></i> View details </a></p>
       </div>
       <div class="col-md-4">
         <h2>Heading</h2>
-        <p>Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
-        <p><a class="btn btn-white border" href="#" role="button">View details </a></p>
+        <p>Donec id elit non mi porta gravida at eget metus.<br> Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+        <p><a class="btn btn-white border" href="#" role="button"> <i class="fa-solid fa-mobile-screen-button"></i> View details  </a></p>
       </div>
       <div class="col-md-4">
         <h2>Heading</h2>
-        <p>Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
-        <p><a class="btn btn-white border" href="#" role="button">View details </a></p>
+        <p>Donec id elit non mi porta gravida at eget metus.<br> Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+        <p><a class="btn btn-white border" href="#" role="button"> <i class="fa-solid fa-location-dot"></i> View details </a></p>
       </div>
     </div>
-  </div>
+  
 </body>
 </html>
